--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Clark - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Melat Desta portfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -75,7 +75,7 @@
       <div class="home-slider owl-carousel">
         <div class="slider-item">
           <div class="overlay"></div>
-          <div class="container">
+          <div class="containers">
             <div
               class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
               data-scrollax-parent="true"
