--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 data-scrollax=" properties: { translateY: '70%' }"
               >
                 <div class="text">
-                  <span class="subheading">Hello!</span>
+                  <span class="subheading"></span>
                   <h1 class="mb-4 mt-3">
                     I'm a <span>AI researcher</span> pursuing my PhD at the
                     Ethiopia Artificial Intelligence Institute.
