--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="text">
                   <span class="subheading"></span>
                   <h1 class="mb-4 mt-3">
-                    I'm a <span>PHD student</span>at the
+                    I'm a <span>PHD student</span><span>  </span> at the
                     Ethiopia Artificial Intelligence Institute.
                   </h1>
                   <!-- <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p> -->
